# Text-to-concept

./: .gitignore  LinearAligner.py  README.md  TextToConcept.py  concept_botteleneck_model.py  concept_botteleneck_video.ipynb  concept_bottleneck_model.py  concept_prompts_viclip.csv  concept_prompts_viclip_v01.csv  download_k400.py  download_ucf101.py  example_search_concept_logic_video.ipynb  example_zeroshot.ipynb  example_zeroshot_video.ipynb  my_utils.py  train_video_aligner.py  viclip_experimentation.ipynb  video_utils.py  videomae_experimentation.ipynb  xai_concept_botteleneck_video.ipynb  xai_example_zeroshot_video.ipynb
ViCLIP/: README.md  __init__.py  demo.ipynb  pyproject.toml  viclip.py  viclip_text.py
data_download/: download_k400.py  download_ucf101.py
pretrained_aligners/: videomae_base_aligner_k400.pth
